[gd_scene load_steps=15 format=4 uid="uid://byny7ttftllob"]

[ext_resource type="Script" path="res://Puzzle Games/Game 5/Scripts/game_5.gd" id="1_awv7c"]
[ext_resource type="Texture2D" uid="uid://c7uhyk7hmh1uj" path="res://Puzzle Games/Game 5/Images/Rectangle 137.png" id="4_jm3mv"]
[ext_resource type="Texture2D" uid="uid://cfin0uvngwljj" path="res://Puzzle Games/Game 5/Images/Rectangle 138.png" id="5_7ravl"]
[ext_resource type="Texture2D" uid="uid://y3nvsgnvx8ja" path="res://Puzzle Games/Game 5/Images/Rectangle 139.png" id="6_qwjhv"]
[ext_resource type="PackedScene" uid="uid://c00baku4ok14r" path="res://Puzzle Games/Game 5/Scenes/character_game_5.tscn" id="7_p465m"]
[ext_resource type="FontFile" uid="uid://by0fdwphtmen6" path="res://Data/Fonts/Goldman-Bold.ttf" id="9_0icgr"]
[ext_resource type="Texture2D" uid="uid://4xa4fhkq27d" path="res://Data/Images and Sprites/red-flag.png" id="9_qfpyd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lh4r"]
size = Vector2(58, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tsxsm"]
texture = ExtResource("4_jm3mv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qsmwt"]
texture = ExtResource("5_7ravl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bg7jm"]
texture = ExtResource("6_qwjhv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_68qnp"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_tsxsm")
sources/1 = SubResource("TileSetAtlasSource_qsmwt")
sources/2 = SubResource("TileSetAtlasSource_bg7jm")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1wu68"]
bg_color = Color(0, 0.31663, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_la7xp"]
bg_color = Color(0, 0.540633, 7.70092e-07, 1)

[node name="Game 5" type="CanvasLayer"]
visible = false
script = ExtResource("1_awv7c")

[node name="Level 1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Level 1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.772296, 0.850551, 0.923672, 1)

[node name="Node2D" type="Node2D" parent="Level 1/ColorRect"]

[node name="Character" type="Node2D" parent="Level 1/ColorRect"]

[node name="CharacterGame5" parent="Level 1/ColorRect/Character" instance=ExtResource("7_p465m")]
position = Vector2(128, 128)

[node name="Flag" type="Node2D" parent="Level 1/ColorRect"]

[node name="Area2D" type="Area2D" parent="Level 1/ColorRect/Flag"]
position = Vector2(992, 344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/ColorRect/Flag/Area2D"]
position = Vector2(32, 40)
shape = SubResource("RectangleShape2D_4lh4r")

[node name="TextureRect" type="TextureRect" parent="Level 1/ColorRect/Flag/Area2D"]
offset_left = 8.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 64.0
texture = ExtResource("9_qfpyd")
expand_mode = 1

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="ColorRect2"]
self_modulate = Color(1, 1, 1, 0.411765)
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAMAAgAAAAAAAAAFAAAAAgAAAAAAAAAFAAMAAgAAAAAAAAAGAAAAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAMAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAMAAgAAAAAAAAAJAAAAAgAAAAAAAAAKAAAAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAMAAgAAAAAAAAALAAAAAgAAAAAAAAALAAEAAgAAAAAAAAALAAIAAgAAAAAAAAALAAMAAgAAAAAAAAAMAAAAAgAAAAAAAAANAAAAAgAAAAAAAAANAAEAAgAAAAAAAAANAAIAAgAAAAAAAAANAAMAAgAAAAAAAAAPAAAAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAIAAgAAAAAAAAAPAAMAAgAAAAAAAAAQAAAAAgAAAAAAAAARAAAAAgAAAAAAAAARAAQAAgAAAAAAAAAQAAQAAgAAAAAAAAARAAIAAgAAAAAAAAAQAAIAAgAAAAAAAAAPAAQAAgAAAAAAAAACAAQAAgAAAAAAAAABAAQAAgAAAAAAAAAAAAQAAgAAAAAAAAACAAIAAgAAAAAAAAACAAMAAgAAAAAAAAAMAAUAAgAAAAAAAAALAAUAAgAAAAAAAAAKAAUAAgAAAAAAAAAJAAUAAgAAAAAAAAAIAAUAAgAAAAAAAAAHAAUAAgAAAAAAAAAGAAUAAgAAAAAAAAAFAAUAAgAAAAAAAAAFAAYAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgAAAAAAAAAJAAcAAgAAAAAAAAAKAAcAAgAAAAAAAAALAAcAAgAAAAAAAAAMAAcAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAkAAgAAAAAAAAALAAkAAgAAAAAAAAAKAAkAAgAAAAAAAAAJAAkAAgAAAAAAAAAIAAkAAgAAAAAAAAAHAAkAAgAAAAAAAAAGAAkAAgAAAAAAAAAFAAkAAgAAAAAAAAABAAgAAQAAAAAAAAABAAcAAQAAAAAAAAABAAYAAQAAAAAAAAABAAUAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAYAAQAAAAAAAAACAAUAAQAAAAAAAAADAAUAAQAAAAAAAAADAAQAAQAAAAAAAAADAAMAAQAAAAAAAAADAAIAAQAAAAAAAAADAAEAAQAAAAAAAAADAAAAAQAAAAAAAAACAAEAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAEAAQAAAAAAAAARAAEAAQAAAAAAAAAQAAEAAQAAAAAAAAARAAMAAQAAAAAAAAAQAAMAAQAAAAAAAAARAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_68qnp")

[node name="Play Again" type="Button" parent="ColorRect2"]
layout_mode = 0
offset_left = 368.0
offset_top = 136.0
offset_right = 800.0
offset_bottom = 216.0
focus_mode = 0
theme_override_fonts/font = ExtResource("9_0icgr")
theme_override_font_sizes/font_size = 35
theme_override_styles/disabled = SubResource("StyleBoxFlat_1wu68")
theme_override_styles/hover = SubResource("StyleBoxFlat_la7xp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1wu68")
theme_override_styles/normal = SubResource("StyleBoxFlat_la7xp")
text = "Play"

[node name="Label" type="Label" parent="ColorRect2"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="Node2D"]
position = Vector2(128, 128)

[node name="2" type="Marker2D" parent="Node2D"]
position = Vector2(128, 128)

[node name="3" type="Marker2D" parent="Node2D"]
position = Vector2(1056, 352)

[node name="4" type="Marker2D" parent="Node2D"]
position = Vector2(128, 384)

[node name="Node2D2" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="Node2D2"]
position = Vector2(1024, 352)

[node name="2" type="Marker2D" parent="Node2D2"]
position = Vector2(1008, 416)

[node name="3" type="Marker2D" parent="Node2D2"]
position = Vector2(64, 320)

[node name="4" type="Marker2D" parent="Node2D2"]
position = Vector2(1024, 384)

[connection signal="body_entered" from="Level 1/ColorRect/Flag/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="ColorRect2/Play Again" to="." method="_on_play_again_pressed"]
